a better way to module

--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -2,16 +2,15 @@
 
 ## Module
 
-Each file is a module. For testing purposes and future features a `namespace` keyword is provided to scope module
-level code:
-
+Each file is a module. For testing purposes all module code can be scoped within a special `__module` function. Otherwise
+all of the code inside a `.walt` file is assumed to be part of the module declaration.
 ```
 // code to be tested
-namespace module {
-  // code here, import, export go here
+function __module() {
+  // memory, table, imports, exports and module body are here
 }
 
-// assertions
+// assertions, not part of the module code
 
 // assert_return(...);
 // assert_return(...);
@@ -24,6 +23,8 @@ Memory and Table defined with by `memory` and `table` keyword. Values of each mu
 **Memory**
 
 ` void: memory = [0, 128]; // number of pages [min, max]`
+
+**Table**
 
 ```javascript
 
