--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -2,20 +2,58 @@
 
 ## Module
 
-Each file is a module. For testing purposes all module code can be scoped within a special `__module` function. Otherwise
-all of the code inside a `.walt` file is assumed to be part of the module declaration.
+Each file is assumed to be a module and is scoped as such, unless the `module` keyword is used to declare 1 or more
+modules inside the file.
+
+**module** _See: function_
+
+`module` is an alias for `function` but is treated as a special Module declaration by the parser. This provides
+the ability to define more than one module per file. Which is also available in wast.
+
 ```
-// code to be tested
-function __module() {
+// module and function keyword can omit an identifier
+module () {
   // memory, table, imports, exports and module body are here
 }
 
-// assertions, not part of the module code
+// Multiple modules can be declared in a single file
+module bar() {
+  // everything scoped to bar
+}
+
+// assertions, not part of any module code
 
 // assert_return(...);
 // assert_return(...);
 ```
 
+These two are equivalent
+* `module () {}` - empty module function
+* ` ` -  empty file
+
+They compile to:
+* `(module)` - empty module
+
+## Functions
+
+Function declarations resemble ES5 functions. Functions with return values must be declared as such. A function not
+returning a result can omit a return type.
+
+```
+// name can be omited, but the function may not be referenced
+function() {
+};
+
+// named function
+function foo() {
+}
+
+// return values
+function bar(): i32 {
+  x:f64 = 5.0
+  return x
+} //     ^  Type Error: return value of type i32 expected
+```
 ## Memory, Table
 
 Memory and Table defined with by `memory` and `table` keyword. Values of each must be an arrays.
