--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -1,5 +1,9 @@
 # Syntax Version 0.1
 
+## ;
+
+No semicolons. I couldn't think of a good reason for them.
+
 ## Module
 
 Each file is assumed to be a module and is scoped as such, unless the `module` keyword is used to declare 1 or more
@@ -53,7 +57,13 @@ function bar(): i32 {
   x:f64 = 5.0
   return x
 } //     ^  Type Error: return value of type i32 expected
+
+// IIFE
+(function (num): bool {
+  return num % 2 !== 0
+})(2)
 ```
+
 ## Memory, Table
 
 Memory and Table defined with by `memory` and `table` keyword. Values of each must be an arrays.
