imports and exports

--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -64,15 +64,42 @@ function bar(): i32 {
 })(2)
 ```
 
+## Exports, Imports
+
+ES6-like imports and exports are supported. `default` keyword is not, there are not default exports in wast modules.
+
+```
+module foobar() {
+  import log from 'console'
+
+  global counter: i32 = 0
+
+  export function count() {
+    log(counter++)
+  }
+}
+```
+
+`import` statements are only allowed at the top of the module. `import` inside module body is a syntax error.
+
+```
+module notallowed() {
+  global foo: bool = false
+  import log from 'console'
+  // ^ Syntax error
+}
+```
+
 ## Memory, Table
 
 Memory and Table defined with by `memory` and `table` keyword. Values of each must be an arrays.
 
 **Memory**
 
-` void: memory = [0, 128]; // number of pages [min, max]`
+` mem: memory = [0, 128] // number of pages [min, max]`
 
 **Table**
+
 
 ```javascript
 
