--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -100,6 +100,44 @@ Memory and Table defined with by `memory` and `table` keyword. Values of each mu
 
 **Table**
 
+## Types
+
+Native wasm modules are supported: `i32, i64, f32, f64`. With two additional types `bool` and `func`.
+
+* `bool` is an alias for `i32` but is a strictly type checked.
+* `func` is a function pointer. Function pointer cannot be cast to any other type.
+
+**Type casting**
+
+All type-casting must be explicit. No type casting is performed for you. Parser will throw an error on implicit conversions.
+
+```
+x: i32 = 0
+y: f32 = 1
+
+x = y;
+// ^ Type Error: implicit conversion f32 to i32
+
+x = y:i32
+// Ok!
+
+z: bool = 1
+x = z
+// ^ Type Error: implicit conversion bool to i32
+
+// bool is alias for i32 but is type-checked for full type safety
+x = z:i32
+// Ok!
+
+// function pointer cannot be converted
+function (log: func) {
+  x: i64 = func
+  // ^ Type Error: cannot convert function to i64
+  z: i64;
+  z = log:i64;
+  // ^ Type Error: cannot convert function to i64
+}
+```
 
 ```javascript
 
