--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -157,16 +157,18 @@ function fibonacci(num){
 
 ```
 function fibonacci(num: i64): i64 {
-	a: i64 = 1,b: i64 = 0, temp;
+	a: i64 = 1
+  b: i64 = 0
+  temp: i64
 
 	while (num >= 0) {
-		temp = a;
-    a = a + b;
-    b = temp;
-    num--;
+		temp = a
+    a = a + b
+    b = temp
+    num--
   }
 
-  return b;
+  return b
 }
 ```
 
@@ -180,8 +182,8 @@ function fibonacci(num) {
 
 ```
 function fibonacci(num: i64): i64 {
-  if (num <= 1) return 1;
-  return fibonacci(num - 1) + fibonacci(num - 2);
+  if (num <= 1) return 1
+  return fibonacci(num - 1) + fibonacci(num - 2)
 }
 ```
 
