cleanup, more type safety

--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -41,25 +41,25 @@ They compile to:
 ## Functions
 
 Function declarations resemble ES5 functions. Functions with return values must be declared as such. A function not
-returning a result can omit a return type.
+returning a result can omit a return type. `func` keyword is used for both function declarations and function pointer types.
 
 ```
 // name can be omited, but the function may not be referenced
-function() {
+func() {
 };
 
 // named function
-function foo() {
+func foo() {
 }
 
 // return values
-function bar(): i32 {
+func bar(): i32 {
   x:f64 = 5.0
   return x
 } //     ^  Type Error: return value of type i32 expected
 
 // IIFE
-(function (num): bool {
+(func (num): bool {
   return num % 2 !== 0
 })(2)
 ```
@@ -67,14 +67,15 @@ function bar(): i32 {
 ## Exports, Imports
 
 ES6-like imports and exports are supported. `default` keyword is not, there are not default exports in wast modules.
+All imports must be statically typed. For example, imported function must have a type of `func`.
 
 ```
 module foobar() {
-  import log from 'console'
+  import log: func from 'console'
 
   global counter: i32 = 0
 
-  export function count() {
+  export func count() {
     log(counter++)
   }
 }
@@ -84,9 +85,12 @@ module foobar() {
 
 ```
 module notallowed() {
+  import bar from 'console'
+  // ^ Syntax Error: Expect type after identifier 'bar'
+
   global foo: bool = false
-  import log from 'console'
-  // ^ Syntax error
+  import log: func from 'console'
+  // ^ Syntax error: imports are only allowed at the start of the module
 }
 ```
 
@@ -130,13 +134,22 @@ x = z:i32
 // Ok!
 
 // function pointer cannot be converted
-function (log: func) {
+func (log: func) {
   x: i64 = func
   // ^ Type Error: cannot convert function to i64
   z: i64;
   z = log:i64;
   // ^ Type Error: cannot convert function to i64
 }
+
+// function can be declared as variables
+import log: func from 'console';
+foo: func = (num: i32) {
+  log(num)
+}
+
+foo(42); // 42
+
 ```
 
 ```javascript
@@ -156,7 +169,7 @@ function fibonacci(num){
 ```
 
 ```
-function fibonacci(num: i64): i64 {
+func fibonacci(num: i64): i64 {
 	a: i64 = 1
   b: i64 = 0
   temp: i64
@@ -181,7 +194,7 @@ function fibonacci(num) {
 ```
 
 ```
-function fibonacci(num: i64): i64 {
+func fibonacci(num: i64): i64 {
   if (num <= 1) return 1
   return fibonacci(num - 1) + fibonacci(num - 2)
 }
