--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -104,6 +104,25 @@ Memory and Table defined with by `memory` and `table` keyword. Values of each mu
 
 **Table**
 
+## Type operator `:`
+
+`:` _"type of"_ keyword is a special operator and only has a single meaning in walt. Is used to describe types
+
+
+The line:
+`x : i32`
+
+can be rad as:
+`x type of 32-bit integer`
+
+_type of_ operator can be used with assigned to perform type conversion
+
+The line:
+`y = x : f32`
+
+can be read as:
+`assign y the value of x type of 32-bit float`
+
 ## Types
 
 Native wasm modules are supported: `i32, i64, f32, f64`. With two additional types `bool` and `func`.
