ast work continues. Clean-up

--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -94,7 +94,7 @@ module notallowed() {
 }
 ```
 
-## Memory, Table
+## Memory, Table (WIP)
 
 Memory and Table defined with by `memory` and `table` keyword. Values of each must be an arrays.
 
