--- a/docs/v_0_1.md
+++ b/docs/v_0_1.md
@@ -104,6 +104,11 @@ Memory and Table defined with by `memory` and `table` keyword. Values of each mu
 
 **Table**
 
+## Declaration
+
+`let` and `const` declarations are supported. Scope is infered based on where the value is declared. There are only two
+possible scopes: `function` or `global`. Variables declared outside a function are `global` by default.
+
 ## Type operator `:`
 
 `:` _"type of"_ keyword is a special operator and only has a single meaning in walt. Is used to describe types
